# hobby-script

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.py  compile_flags.txt  main.hb  main.hby  some_module.hby  test.py
examples/: arabic_to_roman.hby  dec_to_roman.hby  hello_world.hbs  linked_list.hbs  linked_list.hby  math_interpreter.hby  person.hby  xiny.hby
examples/benchmark/: binary_trees.hb  fib.hb  fib.lua  fib.py  fib.wren
src/: api.c  arr.c  arr.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  err.c  errmsg.h  hbs.c  hbs.h  hby.c  hby.h  lexer.c  lexer.h  lib.h  lib_arr.c  lib_core.c  lib_ease.c  lib_io.c  lib_map.c  lib_math.c  lib_rand.c  lib_rng.c  lib_str.c  lib_sys.c  main.c  map.c  map.h  mem.c  mem.h  obj.c  obj.h  parser.c  parser.h  state.c  state.h  (+8 more)
tests/language/: bom.hbs  precedence.hbs  unexpected_character.hy
tests/language/array/: assign.hbs  bound_methods.hb  equality.hby  index_string.hy  methods.hbs  methods.hby  out_of_bounds.hby  out_of_bounds_negative.hbs  syntax.hb  unterminated.hbs
tests/language/assignment/: associativity.hbs  global.hbs  grouping.hbs  inc_dec_expr.hby  infix_operator.hbs  local.hb  multiple.hby  multiple_length_mismatch.hby  multiple_no_array.hby  multiple_to_nonarray.hby  prefix_operator.hby  shorthand.hbs  syntax.hb  to_this.hb  to_this.hby  undefined.hby
tests/language/block/: empty.hy  scope.hbs
tests/language/bool/: equality.hy  not.hbs
tests/language/break/: closure_in_while.hby  closure_in_while.hy  exit_local_scopes.hbs  in_for_loop.hbs  in_function_in_loop.hbs  in_while_loop.hbs  outside_loop.hbs
tests/language/closure/: assign_to_closure.hbs  assign_to_shadowed_later.hbs  close_over_function_parameter.hbs  close_over_later_variable.hbs  close_over_method_parameter.hy  closed_closure_in_function.hbs  nested_closure.hby  open_closure_in_function.hbs  reference_closure_multiple_times.hbs  reuse_closure_slot.hbs  reuse_closure_slot.hby  shadow_closure_with_local.hb  unused_closure.hbs  unused_closure.hby  unused_later_closure.hby  unused_later_closure.hy
tests/language/comments/: line_at_eof.hy  unicode.hy
tests/language/consts/: basic_usage.hby  try_assign.hby
tests/language/continue/: closure_in_while.hbs  closure_in_while.hby  exit_local_scopes.hbs  in_for_loop.hb  in_function_in_loop.hby  in_while_loop.hby  outside_loop.hbs
tests/language/enum/: in_static_struct.hby  in_struct.hbs  printed.hbs  syntax.hb
tests/language/field/: call_function_field.hbs  call_nonfunction_field.hbs  many.hb  method.hbs  method_binds_this.hbs  on_instance.hy  set_evaluation_order.hbs  undefined.hbs
tests/language/for/: break.hbs  closure_in_body.hbs  closure_in_body.hby  continue.hb  return_inside.hy  struct_in_body.hb  syntax.hb  var_after_break.hby  var_after_continue.hbs  var_as_body.hy
tests/limit/: loop_too_large.hbs  too_many_constants.hb  too_many_upvalues.hy  too_many_vars.hbs
(+199 files in other folders)
